objects/Account.object
<CustomObject>
    <fields>
        <fullName>QIDC__OneKeyId_IMS__c</fullName>
        <description>OneKey Id</description>
        <externalId>true</externalId>
        <label>OneKeyId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__ParentOneKeyID_IMS__c</fullName>
        <externalId>true</externalId>
        <label>Parent OneKey ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>academic_institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the account is a teaching hospital</description>
        <label>Academic Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>account_crm_region__c</fullName>
        <description>Populated via SAP integration and used in reporting.</description>
        <label>Account CRM Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>account_vi_region__c</fullName>
        <description>Populated via SAP integration and used in reporting.</description>
        <label>Account VI Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>beds__c</fullName>
        <description>Number of beds at hospital</description>
        <label>Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bill_to_account_no__c</fullName>
        <description>SAP BILL-TO number</description>
        <label>Bill-to Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the account has not been extended credit terms by BIOTRONIK (Cash On Delivery)</description>
        <label>COD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collaborative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborative</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collaborative Members</relationshipLabel>
        <relationshipName>Collaboratives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>credit_limit__c</fullName>
        <description>Credit limit extended to account</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crm_pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contains Bradycardia, Tachycardia, Diagnostic</description>
        <label>CRM Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>CRM_Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crm_ranking__c</fullName>
        <description>Indication of CRM customer opportunity quality</description>
        <label>CRM Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target 1</fullName>
                </value>
                <value>
                    <fullName>Target 2</fullName>
                </value>
                <value>
                    <fullName>Target 3</fullName>
                </value>
                <value>
                    <fullName>Target 4</fullName>
                </value>
                <value>
                    <fullName>Unscored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cvi_pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CVI Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts (CVI Pricebook)</relationshipLabel>
        <relationshipName>CVI_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dummy_pb_update__c</fullName>
        <label>Dummy Pricebook Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Primary contact email</description>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>enhanced_label__c</fullName>
        <formula>Name &amp; &apos; (&apos; &amp; sap_no__c  &amp; &apos;), &apos; &amp; BillingCity</formula>
        <label>Enhanced Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>global_location_number__c</fullName>
        <description>Identification of accounts required for EDI integration scenarios and for GPO lists.</description>
        <label>Global Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GPO Members</relationshipLabel>
        <relationshipName>GPOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>health_industry_number__c</fullName>
        <description>unique and standardized identifier that enumerates hospitals, providers, suppliers, and all other partners doing business in the supply chain</description>
        <label>Health Industry Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icd_implant_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICD implant certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoice_unpaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox selected if the implanting facility is past due on unpaid invoices.</description>
        <label>Invoice Unpaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>medicare_id__c</fullName>
        <description>Identifier assigned to hospitals by the US government</description>
        <label>Medicare ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metrpolitan_statistical_area__c</fullName>
        <description>A geographical region defined by close economic ties throughout the area</description>
        <label>Metrpolitan Statistical Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABILENE, TX MSA</fullName>
                </value>
                <value>
                    <fullName>AKRON, OH MSA</fullName>
                </value>
                <value>
                    <fullName>AL NONMETROPOLITAN AREA</fullName>
                </value>
                <value>
                    <fullName>ALBANY, GA MSA</fullName>
                </value>
                <value>
                    <fullName>ALBANY-SCHENECTADY-TROY, NY MSA</fullName>
                </value>
                <value>
                    <fullName>ALBUQUERQUE, NM MSA</fullName>
                </value>
                <value>
                    <fullName>ALEXANDRIA, LA MSA</fullName>
                </value>
                <value>
                    <fullName>ALLENTOWN-BETHLEHEM-EASTON, PA-NJ MSA</fullName>
                </value>
                <value>
                    <fullName>ALTOONA, PA MSA</fullName>
                </value>
                <value>
                    <fullName>AMARILLO, TX MSA</fullName>
                </value>
                <value>
                    <fullName>AMES, IA MSA</fullName>
                </value>
                <value>
                    <fullName>ANCHORAGE, AK MSA</fullName>
                </value>
                <value>
                    <fullName>ANDERSON, IN MSA</fullName>
                </value>
                <value>
                    <fullName>ANDERSON, SC MSA</fullName>
                </value>
                <value>
                    <fullName>ANN ARBOR, MI MSA</fullName>
                </value>
                <value>
                    <fullName>ANNISTON-OXFORD, AL MSA</fullName>
                </value>
                <value>
                    <fullName>APPLETON, WI MSA</fullName>
                </value>
                <value>
                    <fullName>AR NONMETROPOLITAN AREA</fullName>
                </value>
                <value>
                    <fullName>ASHEVILLE, NC MSA</fullName>
                </value>
                <value>
                    <fullName>ATHENS-CLARK COUNTY, GA MSA</fullName>
                </value>
                <value>
                    <fullName>ATLANTA-SANDY SPRINGS-MARIETTA, GA MSA</fullName>
                </value>
                <value>
                    <fullName>ATLANTIC CITY, NJ MSA</fullName>
                </value>
                <value>
                    <fullName>AUBURN-OPELIKA, AL MSA</fullName>
                </value>
                <value>
                    <fullName>AUGUSTA-RICHMOND COUNTY, GA-SC MSA</fullName>
                </value>
                <value>
                    <fullName>AUSTIN-ROUND ROCK, TX MSA</fullName>
                </value>
                <value>
                    <fullName>AZ NONMETROPOLITAN AREA</fullName>
                </value>
                <value>
                    <fullName>BAKERSFIELD, CA MSA</fullName>
                </value>
                <value>
                    <fullName>BALTIMORE-TOWSON, MD MSA</fullName>
                </value>
                <value>
                    <fullName>BANGOR, ME MSA</fullName>
                </value>
                <value>
                    <fullName>BARNSTABLE TOWN, MA MSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>mri_scan_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MRI scan certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>over_credit_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox selected if the implanting facility is over their credit limit.</description>
        <label>Over Credit Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pricing_alignment__c</fullName>
        <description>First level categorization of Pricing Institution</description>
        <label>Pricing Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collaborative</fullName>
                </value>
                <value>
                    <fullName>GPO</fullName>
                </value>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pricing_institution2__c</fullName>
        <formula>IF( 
ISPICKVAL(pricing_alignment__c,&quot;IDN&quot;), 
Parent.Name, 

IF( 
ISPICKVAL(pricing_alignment__c,&quot;GPO&quot;), 
gpo__r.Name, 

IF( 
ISPICKVAL(pricing_alignment__c,&quot;Collaborative&quot;), 
collaborative__r.Name, 

IF( 
ISPICKVAL(pricing_alignment__c,&quot;Local&quot;), 
Name, 

&quot;Unknown&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pvi_pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PVI Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts (PVI Pricebook)</relationshipLabel>
        <relationshipName>PVI_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_no__c</fullName>
        <description>SAP SHIP-TO account number</description>
        <externalId>true</externalId>
        <label>SAP No</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Indicator of whether account is active or inactive</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>inactive</fullName>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tax_id__c</fullName>
        <description>Tax ID for financial identification of account.</description>
        <label>TAX ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vendor_id__c</fullName>
        <description>The SAP Vendor ID.</description>
        <externalId>true</externalId>
        <label>Vendor ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>status__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>sap_no__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.x5500_us_account</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>status__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>sap_no__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.x5500_us_account</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Manufacturer_Account</fullName>
        <active>true</active>
        <label>Manufacturer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Account</fullName>
        <active>true</active>
        <description>Accounts that are not in SAP: clinics, leads, complaint reporters, funeral homes, etc</description>
        <label>Other Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physician_Account</fullName>
        <active>true</active>
        <label>Physician Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>patient_account</fullName>
        <active>true</active>
        <description>Grants visibility to the patient.</description>
        <label>Patient Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>x5500_us_account</fullName>
        <active>true</active>
        <label>US Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(Name, &quot;\\p{Lu}.*&quot;))</errorConditionFormula>
        <errorMessage>Please use capitalize letter for Account Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nonadmins_cant_change_standard_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Not($Permission.Validationrule_Exception),
RecordType.DeveloperName = &quot;x5500_us_account&quot;,
OR(
ISCHANGED(Name),
ISCHANGED(OwnerId)))</errorConditionFormula>
        <errorMessage>Please contact your system administrator to change the name, owner or record type of an SAP-mastered Account.</errorMessage>
    </validationRules>
</CustomObject>